Atualização nas rotas comments e respectiva documentação
